--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ input {
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.5);
     padding: 2px 5px;
+    margin-left: 7px;
 }
 
 form {
@@ -103,4 +104,24 @@ form {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 20px;
+}
+
+.players {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.end-game-card {
+    border: 1px solid var(--gray);
+    border-radius: 50px 0 50px 0;
+    padding: 80px 70px;
+    position: relative;
+}
+
+.end-game-close {
+    position: absolute;
+    top: -20px;
+    right: -13px;
 }
